--- a/azraelhtml/src/assets/css/mystyle.css
+++ b/azraelhtml/src/assets/css/mystyle.css
@@ -142,6 +142,16 @@ html {
 .el-checkbox.el-transfer-panel__item {
   color: #fff;
 }
+.el-tree {
+  background-color: #00000060;
+  color: #fff;
+}
+.el-tree-node__content:hover {
+  background-color: #80cdcb;
+}
+.el-tree-node:focus > .el-tree-node__content {
+  background-color: #80cdcb;
+}
 
 /* summernote */
 .note-btn {
