--- a/azraelhtml/src/assets/css/mystyle.css
+++ b/azraelhtml/src/assets/css/mystyle.css
@@ -27,7 +27,16 @@ html {
   top: 0;
   z-index: 1001;
 }
-
+.user-name {
+  position: absolute;
+  right: 35px;
+  height: 50px;
+  color: #5edbb5;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 /* 左侧边栏导航 */
 #left-menu {
   width: 200px;
